# libws

./: CMakeLists.txt  README.md  conanfile.py
src/: websocket-client.cpp  websocket-client.h
